docs/7.56/md/abenglobal_parameters_obsolete.md
---
title: "Global Parameters"
description: |
  The formal parameters of the interface(https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenfunction.htm) of a function module can be made known globally by choosing Edit → Interface → Globalize Parameters in the Function Builder. Then the field Global is selected in the properties of th
version: "7.56"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenglobal_parameters_obsolete.htm"
abapFile: "abenglobal_parameters_obsolete.htm"
keywords: ["select", "do", "if", "case", "data", "field-symbol", "abenglobal", "parameters", "obsolete"]
---

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_reference.htm) →  [Obsolete Language Elements](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_obsolete.htm) →  [Obsolete Modularization](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenobsolete_modularization.htm) →  [Function Modules](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenfunction_modules_obsolete.htm) → 

Global Parameters

The formal parameters of the [interface](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenfunction.htm) of a function module can be made known globally by choosing Edit → Interface → Globalize Parameters in the Function Builder. Then the field Global is selected in the properties of the function module. The formal parameters of a global interface have the following properties:

-   All parameters that are completely typed and for which pass by value is defined are handled as if identically named global data objects were declared in the top include. This means they are visible in the entire function pool and, when the function module is exited, they retain their value.
-   All other parameters are handled as if identically named data objects were declared in the top include (two in each case for [table parameters](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abaptables_parameters_obsolete.htm), one for the table body and one for the header line). They can however only be used during execution of the function module. If a parameter of this type is accessed when the function module is not executed, the runtime error GETWA\_NOT\_ASSIGNED occurs, since these parameters are implemented internally by field symbols. A data object is only assigned to these field symbols during the execution of the function module.

In the function pool, no global data objects with the same name as a global parameter may be created. If multiple function modules in a function pool have global interfaces, identically named parameters must have identical definitions.

Hint

The use of global interface parameters is obsolete and interfaces should generally not be globalized in new function modules.